[package]
name = "tycl_cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[[bin]]
name = "tycl"
path = "src/main.rs"

[dependencies]
tycl_parser = { path = "../tycl_parser", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yaml = "0.9"
anyhow = "1"
prettyplease = "0.2"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
